--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,39 @@
-.App {
-  text-align: center;
+:root {
+  --white: #fff;
+  --grey-50: #fafafa;
+  --grey-100: #f5f5f5;
+  --grey-300: #e0e0e0;
+  --grey-500: #9e9e9e;
+  --grey-600: #757575;
+  --grey-900: #212121;
+  --deep-orange-100: #ffccbc;
+  --deep-orange-500: #ff5722;
+  --base-grid-size: 8px;
 }
+
+/* -- reset styles start -- */
+
+html,
+body,
+input,
+button {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+button,
+input {
+  background: white;
+  border: none;
+}
+
+/* -- reset styles end -- */
 
 .App-logo {
   height: 40vmin;
@@ -31,9 +64,9 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(10px)
+    transform: translateY(10px);
   }
   100% {
-    transform: translateY(0px)
+    transform: translateY(0px);
   }
 }
